@@ -15,6 +15,8 @@ S4U:
    or Mailbox::get_async<void>() if you really want to play with void*.
  - Unify the interface of Activity::on_{start/activity}
  - New function: Comm::get_dst_data()
+ - New functions: Comm::sendto_{init,async} to initiate a communication
+   on between two (possibly remote) hosts.
 
 ----------------------------------------------------------------------------
 
